--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     </a>
 
                 </div>
-
+                <!--
                 <div class="iconH m-2 ">
                     <a href="https://instagram.com/bhavs_15_16?igshid=NTc4MTIwNjQ2YQ==" target="_blank">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
@@ -66,7 +66,8 @@
                         </svg>
                     </a>
 
-                </div>
+                </div>-->
+                
                 <div class="iconH m-2">
                     <a href="https://wa.me/919440906475" target="_blank">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
@@ -619,7 +620,7 @@
                     </a>
 
                 </div>
-
+                <!--
                 <div class="icon m-2 d-flex flex-column text-center justify-content-center">
                     <a href="https://instagram.com/bhavs_15_16?igshid=NTc4MTIwNjQ2YQ==" target="_blank">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
@@ -628,7 +629,7 @@
                         <label>Insta</label>
                     </a>
 
-                </div>
+                </div>-->
 
                 <div class="icon m-2 d-flex flex-column text-center justify-content-center">
                     <a href="https://wa.me/919440906475" target="_blank">
